# ninja_scrapers

./: Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs
src/api/: mod.rs  reto03.rs  reto05.rs
src/api/reto05/: 10_code.html  abrams.html  ace_of_base.html  airplay.html  alizbar.html  allison.html  annie_taylor.html  annwn.html  antischism.html  audioslave.html  avishai_cohen.html  bad_english.html  battle_of_disarm.html  beau_and_the_arrows.html  berliner_philharmoniker.html  big_daddy_kane.html  big_l.html  bill_evans.html  bing_crosby.html  blaze_bayley.html  boogie_down_productions.html  booze_brothers.html  bryan_adams.html  budgie.html  candido.html  cannonball_adderley.html  cappadonna.html  carl_philipp_emanuel_bach.html  charlie_parker.html  chick_corea.html  conflict.html  corrosion_of_conformity.html  dave_brubeck.html  dead_horse.html  diamond_head.html  diddy.html  die_fantastischen_vier.html  digital_underground.html  dj_khaled.html  donald_byrd.html  (+78 more)
src/bbdd/: datos.sql  mod.rs
src/html/reto01/: index.html  sitemap.xml  styles.css
src/html/reto02/: index.html
src/html/reto03/: index.html
src/html/reto04/: index.html
src/html/reto06/: index.html  yew_wasm-ddbdfe5eb4521942d0d0bec69e45642bdffbfbb26378757760fa0355bdca20bc41073a457d1683f1987897ad9670fec6.js  yew_wasm-ddbdfe5eb4521942d0d0bec69e45642bdffbfbb26378757760fa0355bdca20bc41073a457d1683f1987897ad9670fec6_bg.wasm
src/idiomas/: en.toml  es.toml  mod.rs
src/index/: mod.rs  plantilla.html
src/resolver/: mod.rs
src/utilidades/: mod.rs
src/websockets/: mod.rs
(+223 files in other folders)
