[package]
name = "ninja_scrapers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-embed = "0.1.0"
bson = "2.9.0"
clap = { version = "4.4.18", features = ["derive"] }
handlebars = "5.1.0"
magic-crypt = "3.1.13"
rust-embed = "8.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.9"
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower_governor = "0.3.2"
uuid = "1.7.0"
